--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="part2">
         <center id="section1">
             <div class="card" style="width: 18rem;">
-                <img src="Images/71PMC4DWWFL._AC_SX679_.jpg" class="card-img-top" alt="...">
+                <img src="71PMC4DWWFL._AC_SX679_.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Playstation 5</h5>
                   <p class="card-text">Elevate your gaming to new heights with the PlayStation 5, the pinnacle of next-generation gaming consoles.
@@ -39,7 +39,7 @@
                 </div>
               </div>
               <div class="card" style="width: 18rem;">
-                <img src="Images/xbox360.jpeg" class="card-img-top" alt="...">
+                <img src="xbox360.jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Xbox 360</h5>
                   <p class="card-text">The Xbox 360 revolutionized gaming when it was first introduced, and it continues to be a beloved choice for gamers of all ages.</p>
@@ -47,7 +47,7 @@
                 </div>
               </div>
               <div class="card" style="width: 18rem;">
-                <img src="Images/series x.jpeg" class="card-img-top" alt="...">
+                <img src="series x.jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Xbox Series X</h5>
                   <p class="card-text">Introducing the Xbox Series X – the compact powerhouse redefining the gaming experience. Designed to deliver next-gen performance in a sleek.</p>
@@ -55,7 +55,7 @@
                 </div>
               </div> <br>
               <div class="card" style="width: 18rem;">
-                <img src="Images/ps4.jpeg" class="card-img-top" alt="...">
+                <img src="ps4.jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Playstation 4</h5>
                   <p class="card-text">Explore our extensive collection of PS4 consoles, games, accessories, and more. Whether you're a seasoned gamer looking for the latest AAA titles.</p>
@@ -63,7 +63,7 @@
                 </div>
               </div>
               <div class="card" style="width: 18rem;">
-                <img src="Images/nintendo_switch.jpeg" class="card-img-top" alt="...">
+                <img src="nintendo_switch.jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Nintendo Switch</h5>
                   <p class="card-text">Revolutionizing the way you play, the Nintendo Switch is more than just a console; it's a gateway to a world of endless entertainment.</p>
@@ -71,7 +71,7 @@
                 </div>
               </div>
               <div class="card" style="width: 18rem;">
-                <img src="Images/ps3.jpeg" class="card-img-top" alt="...">
+                <img src="ps3.jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Playstation 3</h5>
                   <p class="card-text">Step into the world of unparalleled gaming experiences with the iconic PlayStation 3 (PS3). As a cornerstone of modern gaming history.</p>
@@ -87,8 +87,8 @@
 
               Do not hesitate to contact us for any reason!</p>
           </div>
-          <img class="fighter-image" src="Images/Figter.png" alt="Fighter Image">
-          <img class="fighter-image2" src="Images/smallRyuGif.dada97c1044ee8dc0152.gif" alt="Fighter Image">
+          <img class="fighter-image" src="Figter.png" alt="Fighter Image">
+          <img class="fighter-image2" src="smallRyuGif.dada97c1044ee8dc0152.gif" alt="Fighter Image">
       </div>
     </div>
 
